--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
 
+/* css variables */
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
+/* tailwind variables linked with the css variables */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -12,6 +14,7 @@
   --font-mono: var(--font-geist-mono);
 }
 
+/* dark mode color scheme and styles */
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
